# NeuroForecast

./: README.md  main.py  neuro_forecast.py  pyproject.toml  retail_sales_multivariate.py
test/: test_dataprofiler.py  test_mock.py
