[project]
name = "ai-driven-timeseries-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "xgboost>=3.1.1",
]
